--- a/OdeToFood.Web/Views/Restaurants/Index.cshtml
+++ b/OdeToFood.Web/Views/Restaurants/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Cuisine) <!--table header: Cuisine-->
+            @Html.DisplayNameFor(model => model.Name) <!--table header: Cuisine-->
         </th>
         <th></th>
     </tr>
