Set customer footer

--- a/OdeToFood.Web/Views/Restaurants/Index.cshtml
+++ b/OdeToFood.Web/Views/Restaurants/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<OdeToFood.Data.Models.Restaurant>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Yo!!!";
+    ViewBag.Message = "Hello!";
 }
 
 <h2>Index</h2>
@@ -31,3 +32,7 @@
 }
 
 </table>
+
+@section footer {
+    <p>This is a custom footer.</p>
+    }
